﻿<p>This is the «SITE-NAME»'s news stream, live since <b>19/09/2019</b>. Check back often to keep abreast of the most relevant developments.</p>

<h2>12/10/2019</h2>
<h3>Puzzlescript game database & tools</h3>
<p>The world's largest public puzzlescript game database was released for the first time.</p>
<p>Some game making tools were listed, for future reference.</p>

<h2>02/10/2019</h2>
<h3>Game bar keyboard shortcuts system</h3>
<p>A better keyboard shortcut system was added. Menu navigation using (<kbd>ctrl</kbd>+)<kbd>enter</kbd>, <kbd>space</kbd>, (<kbd>shift</kbd>+)<kbd>tab</kbd> and <kbd>arrows</kbd> has improved.</p>
<p>GIF hints can now be played/paused with <kbd>enter</kbd> or <kbd>space</kbd>.</p>

<h2>21/09/2019</h2>
<h3>Skilleblokker</h3>
<p><a href='skilleblokker.html' target='_blank'>Skilleblokker</a> spillet utgitt!</p>

<h2>19/09/2019</h2>
<h3>Bookmarklet</h3>
<p>The game bar now can be applied to any online puzzlescript game by means of a <a href="game-bar.html#Bookmarklet">Bookmarklet</a>, a suggestion by ««P-PRE»MINOTALEN«P-POS»».</p>

<h2>11/09/2019</h2>
<h3>Hints system</h3>
<p>The game bar now includes support for Hints, a suggestion by ««P-PRE»MINOTALEN«P-POS»». Hints were added to <a href="platformer-template.html#hints">Platformer Template</a>.</p>

<h2>07/09/2019</h2>
<h3>Keyboard Keys styling</h3>
<p>Keyboard keys across the «SITE-NAME» are now nicely <kbd>S</kbd> <kbd>T</kbd> <kbd>Y</kbd> <kbd>L</kbd> <kbd>E</kbd> <kbd>D</kbd>.</p>

<h2>02/09/2019</h2>
<h3>Undo: press and hold</h3>
<p>The game bar's undo button now supports <kbd>press and hold</kbd> to undo several moves at once, useful in touch devices.</p>

<h2>13/08/2019</h2>
<h3>Custom linear level progressions</h3>
<p>The game bar's level selector now supports linear level progression and boss levels.</p>

<h2>08/08/2019</h2>
<h3>Colour matching</h3>
<p>The game bar's colour now adapts automatically to the color scheme of the current game.</p>

<h2>03/08/2019</h2>