@@ -1,0 +1,31 @@
+«ABOUT-TEXT»
+«ONE-LINER»
+
+«HOWTO-TEXT»
+<p>The screen displays only one word. Your goal is to type this word exactly as shown. However, your keyboard is behaving cryptically...  and the word is also your only clue!</p>
+<p>All puzzles are to be solved by thinking. No quick reflexes are needed, but pencil and paper may prove useful.</p>
+
+<p>«UNDO-RESTART-TEXT|With:{UNDO-KEY->"<kbd>Shift</kbd>+<kbd>U</kbd>",RESTART-KEY->"<kbd>Shift</kbd>+<kbd>R</kbd>"}»</p>
+«GAME-EXTRAS-HINTS-TEXT|With:{TOUCHSCREEN-TEXT->"",FEEDBACK-KEY->"<kbd>Shift</kbd>+<kbd>E</kbd>",FULLSCREEN-KEY->"<kbd>Shift</kbd>+<kbd>F</kbd>",HINT-KEY->"<kbd>Shift</kbd>+<kbd>H</kbd>",LEVEL-KEY->"<kbd>Shift</kbd>+<kbd>L</kbd>",MUSIC-KEY->"<kbd>Shift</kbd>+<kbd>M</kbd>"}»
+
+<h2>Credits</h2>
+
+«CREDITS-AUTHORSHIP»
+
+<h3>Music</h3>
+«CREDITS-MUSIC»
+
+<h3>Game Engine</h3>
+<p>Made with vanilla JS and CSS, including <a href="game-bar.html">«NAME»'s game bar</a>!</p>
+<p>Inspect the <a «BLANK» href='codes/game/puzzle-type.js'><b>source</b></a> freely, but consider <a «BLANK» href='«DONATE-LINK»'><b>supporting the «SITE-NAME»</b></a>!</p>
+
+<h2>F.A.Q.</h2>
+
+<h3>A typing puzzle? Interesting.</h3>
+<p>I know!</p>
+
+<h2>Changelog</h2>
+<h3>10/2019</h3>
+<p>«TITLE-BOLD» was published!</p>
+
+«PRESS-TEXT»
