@@ -1,0 +1,73 @@
+<!DOCTYPE html><html lang="en" xml:lang="en" prefix="og: http://ogp.me/ns#"><head><meta http-equiv="content-type" content="text/html; charset=UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><link href="images/favicon-32x32.png" rel="icon" type="image/png"/><link href="images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/><link href="images/splash.png" rel="apple-touch-icon"/><link href="codes/index.css" rel="stylesheet" type="text/css"/><title>Puzzle type</title>
+<meta name="description" content=" About  Puzzle type  
+ Are you the  Puzzle type ? You re about to find out in this cryptic typing puzzle! 
+
+    How to play Controls - keyboard 
+ The screen displays only one word. Your goal is to type this word exactly as shown. However, your keyboard is behaving cryptically... and the word is also your only clue! 
+ All puzzles are to be solved by thinking. No quick reflexes are needed, but pencil a..."/>
+
+<meta property="og:title" 		content="Puzzle type"/>
+<meta property="og:description"	content=" About  Puzzle type  
+ Are you the  Puzzle type ? You re about to find out in this cryptic typing puzzle! 
+
+    How to play Controls - keyboard 
+ The screen displays only one word. Your goal is to type this word exactly as shown. However, your keyboard is behaving cryptically... and the word is also your only clue! 
+ All puzzles are to be solved by thinking. No quick reflexes are needed, but pencil a..."/>
+<meta property="og:url"			content="https://pedropsi.github.io/puzzle-type.html"/>
+<meta property="og:image"		content="https://pedropsi.github.io/images/splash.png"/>
+
+<meta property="og:type" content="game"/>
+<meta property="og:image:alt"	 content="Puzzle type"/><script src="codes/data-transfer.js"></script></head><body class="body" id="puzzle-type"><div class="main"><div class="nav"><a href="index.html"><div class="logo"><svg viewBox="-8 -8 16 16" xmlns="http://www.w3.org/2000/svg">
+  <rect x="-5" y="-5" width="10" height="10" class="logo-1" fill="#070070" />
+  <rect x="-5" y="-5" width="10" height="10" class="logo-1" fill="#070070" transform="rotate(45)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-2" fill="#000fff" transform="scale(0.765367) rotate(22.5)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-2" fill="#000fff" transform="scale(0.765367) rotate(67.5)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-3" fill="#1982ed" transform="scale(0.585786) rotate(0)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-3" fill="#1982ed" transform="scale(0.585786) rotate(45)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-4" fill="#3bf8de" transform="scale(0.448342) rotate(22.5)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-4" fill="#3bf8de" transform="scale(0.448342) rotate(67.5)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-5" fill="#46f46f" transform="scale(0.343146) rotate(0)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-5" fill="#46f46f" transform="scale(0.343146) rotate(45)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-6" fill="#f0f8af" transform="scale(0.262632) rotate(22.5)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-6" fill="#f0f8af" transform="scale(0.262632) rotate(67.5)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-7" fill="#fff9c9" transform="scale(0.201010) rotate(0)"/>
+  <rect x="-5" y="-5" width="10" height="10" class="logo-7" fill="#fff9c9" transform="scale(0.201010) rotate(45)"/>
+</svg></div></a><nav><a href="news.html" class="nav-link" style="max-width: 728px;">News</a>
+<a href="about.html" class="nav-link" style="max-width: 728px;">About</a>
+<a href="guestbook.html" class="nav-link" style="max-width: 728px;">Guestbook</a>
+<a href="contact.html" class="nav-link" style="max-width: 728px;">Contact</a>
+<a href="posts-by-tag.html" class="nav-link" style="max-width: 728px;">Posts by tag</a>
+<a href="games.html" class="nav-link" style="max-width: 728px;">Games</a>
+<a href="hall-of-fame.html" class="nav-link" style="max-width: 728px;">Hall of Fame</a>
+<a href="subscribe.html" class="nav-link" style="max-width: 728px;">Subscribe</a></nav><div class="rainbowline"></div></div><div class="section"><div class="container"><h1 class="title">Puzzle type</h1><div class="whiteboard"><div class="text prose post" id="post"><h2>About <b>Puzzle type</b></h2>
+<p>Are you the <b>Puzzle type</b>? You're about to find out in this cryptic typing puzzle!</p>
+
+<div class="figure"><img src="images/splash.png" alt="Puzzle type" title="Puzzle type"/></div><h2>How to play</h2><h3>Controls - keyboard</h3>
+<p>The screen displays only one word. Your goal is to type this word exactly as shown. However, your keyboard is behaving cryptically...  and the word is also your only clue!</p>
+<p>All puzzles are to be solved by thinking. No quick reflexes are needed, but pencil and paper may prove useful.</p>
+
+<p><p>Press <span class='Failed-to-load'>UNDOKEY</span> to undo a move. Press <kbd>ctrl</kbd>+<kbd>r</kbd> to restart the level.</p></p>
+<h3>E-mail Pedro PSI real-time feedback</h3><p>Press <kbd>ctrl</kbd>+<kbd>e</kbd> anytime to e-mail real-time feedback to Pedro PSI! Much appreciated!</p><h3>Hints</h3><p>Request a <em>hint</em> by pressing <kbd>ctrl</kbd>+<kbd>h</kbd>, but use them sparingly to preserve your standing, shall you enter the <a href='hall-of-fame.html'><b>Hall of Fame</b></a>!</p><h3>Level navigation</h3><p>Press <kbd>ctrl</kbd>+<kbd>l</kbd> or click <em>Select level</em> in the game bar to navigate freely between all levels..</p><p>Type the level number directly with <kbd>0</kbd> <kbd>1</kbd> <kbd>2</kbd> <kbd>3</kbd> <kbd>4</kbd> <kbd>5</kbd> <kbd>6</kbd> <kbd>7</kbd> <kbd>8</kbd> <kbd>9</kbd>, press <kbd>Tab</kbd> / <kbd>Shift</kbd> + <kbd>Tab</kbd> or <kbd>Left</kbd>/<kbd>Right</kbd> to <em>cycle through levels</em>, <kbd>Enter</kbd> or <kbd>Double Click</kbd> to <em>confirm</em>, <kbd>Esc</kbd> or <kbd>L</kbd> to <em>cancel</em>.</p><h3>Fullscreen</h3><p>Toggle Fullscreen by pressing <kbd>ctrl</kbd>+<kbd>f</kbd>.</p><h2>Hall of fame</h2><p>Once you beat <b>Puzzle type</b>, you'll be invited to enter the <a href='hall-of-fame.html'><b>Hall of Fame</b></a>! As soon as you pass the final credits screen after winning, you'll be able to type your name in a new window. Make sure you are connected to the internet, then <em>press Submit</em> to be <b>remembered forever</b> or <em>close the window</em> to <b>forsake your glory</b>.</p><h2>Community</h2><h3>Guestbook</h3><p>Enjoyed <b>Puzzle type</b>? Add <b>your message</b> below to the Creative Archive's <b><a href="guestbook.html">guestbook</a></b>!</p><div class="button centered" onclick="RequestGuestbook()" tabindex="0">Leave your message!</div>
+
+<h2>Credits</h2>
+
+<p><a href="https://pedropsi.github.io/puzzle-type.html"><b>Puzzle type</b></a> by <a href="https://pedropsi.github.io">Pedro PSI</a>, 2019.</p>
+
+<h3>Music</h3>
+<p>Background music by .</p><table class="top-left"><caption>Music tracks in Puzzle type</caption><thead></thead><tbody></tbody></table><audio class="music" src="media/"></audio>
+
+<h3>Game Engine</h3>
+<p>Made with vanilla JS and CSS, including <a href="game-bar.html">Pedro PSI's game bar</a>!</p>
+<p>Inspect the <a target='_blank' href='codes/game/puzzle-type.js'><b>source</b></a> freely, but consider <a target='_blank' href='2018-02-08-support-the-archive.html'><b>supporting the Creative Archive</b></a>!</p>
+
+<h2>F.A.Q.</h2>
+
+<h3>A typing puzzle? Interesting.</h3>
+<p>I know!</p>
+
+<h2>Changelog</h2>
+<h3>10/2019</h3>
+<p><b>Puzzle type</b> was published!</p>
+
+<h2>Press</h2><p class="centre">Would you like....<ul><li>to write an article about <b>Puzzle type</b>?</li><li>to feature <b>Puzzle type</b> in a curated collection?</li><li>to record a playthrough video or livestream?</li></ul></p><p>Feel free to use and edit, for those purposes, all material on this page, including:<ul> <li>text;</li><li>screenshots and logo below;</li><li>recorded gameplay footage;</li></ul>...as long as you provide appropriate credit and a direct link to this page.</p><h3 class="images">Screenshots & Logo</h3><p>Download all screenshots and logo at once:<a class="download" title="Download all screenshots and logo" href="images/puzzle-type/puzzle-type-screenshots-logo.zip"><b>download all</b> (zip archive)</a></p><div class="featured"><a href="images/" target='_blank'><div class="card"><img src="images/" alt="" title=""/></div></a></div><h3>Other inquiries</h3><p class="centre">Check also the <a href="press.html"><b>Creative Archive's press kit</b></a> or <a href='contact.html'>contact Pedro PSI</a> for all unusual requests!</p></div></div><div class="tags buttonrow"><a class="tag button" href="posts-by-date.html">Saturday, 19/10/2019</a><a class="tag button" href="tag-Game.html">Game</a>
+<a class="tag button" href="tag-Puzzle.html">Puzzle</a></div></div></div></div><div class="footer"><p>© Pedro PSI 2010-2019. <a href='terms-of-use.html'>Terms of Use.</a> <a href='privacy-policy.html'>Privacy Policy.</a> <a href='press.html'>Press kit.</a></p><p><span id="NightMode" onclick='toggleNightMode()'> Darken</span>. <a href='2018-02-08-support-the-archive.html'>Support the Creative Archive!</a> <a href="subscribe.html">Subscribe!</a></p></div><script type="text/javascript" data-cfasync="false" src="codes/analytics.js"></script><script type="text/javascript" data-cfasync="false" src="codes/communication.js"></script><script src="codes/game/puzzle-type/puzzle-type.js"></script></body></html>
